fix: dropdown menu bg in dark mode

--- a/src/components/Header/DesktopNav/index.module.scss
+++ b/src/components/Header/DesktopNav/index.module.scss
@@ -399,7 +399,7 @@ $curve: cubic-bezier(.165, .84, .44, 1);
   }
 }
 
-.dark {
+[data-theme='dark'] {
   .background {
     &:before {
       opacity: 0.9;
